k8s/services/client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-svc
  namespace: client
spec:
  type: LoadBalancer
  selector:
    app: client
  ports:
  - name: http
    port: 80
    targetPort: 8083
