k8s/services/server-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: server-svc
  namespace: server
spec:
  selector:
    app: server
  ports:
  - name: http
    port: 80
    targetPort: 9000
  type: LoadBalancer
