k8s/services/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myHealth-ingress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /client
        pathType: Prefix
        backend:
          service:
            name: client-svc
            port:
              number: 80
      - path: /server
        pathType: Prefix
        backend:
          service:
            name: server-svc
            port:
              number: 80
